--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,9 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
   
   .header {
@@ -15,6 +18,10 @@ body {
     background: #eee;
     color: darkmagenta;
   }
+
+  span{
+    color: red;
+  }
   
   .sidebar {
     width: 300px;
@@ -26,4 +33,21 @@ body {
     border: 1px solid #eee;
     box-shadow: 2px 4px 16px rgba(0,0,0,.06);
     border-radius: 4px;
+  }
+
+  /* Header and Footer */
+
+  .header{
+    font-size: 32px;
+    font-weight: 900;
+    box-sizing: border-box;
+    padding-left: 16px;
+    padding-top: 15px;
+  }
+
+  .footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
   }
