--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
   }
   
   .header {
@@ -27,6 +26,9 @@ body {
     width: 300px;
     background: royalblue;
     box-sizing: border-box;
+    flex-shrink: 0;
+    align-self: stretch;
+    padding: 16px;
   }
   
   .card {
@@ -46,8 +48,45 @@ body {
   }
 
   .footer{
+    margin-top: auto;
     display: flex;
     justify-content: center;
     align-items: center;
 
   }
+
+  /* Content */
+
+  .content{
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
+  }
+
+  .content-cards{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 32px;
+  }
+
+  .card{
+    margin: 20px;
+    text-wrap: wrap;
+    width: 200px;
+    height: 200px;
+  }
+
+a{
+    font-size: 24px;
+    color: white;
+    text-decoration: none;
+}
+
+li{
+    margin-top: 20px;
+}
+
+ul{
+    list-style: none;
+}
